src/assets/style/modules/components/settings.scss
.settings {
  background-color:rgba($color:  map-get($colors, base), $alpha: 0.90);
  flex-grow: 1;
  max-width: rem(272);

  border-radius: rem(20);
  padding: rem(27);
  -webkit-box-shadow: rem(3) rem(3) rem(3) rem(5) rgba(0,0,0,0.45);
  -moz-box-shadow: rem(3) rem(3) rem(3) rem(5) rgba(0,0,0,0.45);
  box-shadow: rem(3) rem(3) rem(3) rem(5) rgba(0,0,0,0.45);
  
  transition: 0.15s;
  transition-timing-function: linear;
  animation-name: popIn;
  animation-duration: 0.4s;
}

.settings__holder {
  display: flex;
  flex-grow: 1;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content:start;
  height: 100%;
}

.settings__holder * {
  flex-basis: 100%;
}

.settings__close {
  display: none;
}

.settings__title {
  color: map-get($colors, contrast);
  flex-basis: 100%;
  text-align: center;
  margin-top: 0;
  margin-bottom: rem(10);
}

.settings__title-image {
  width: rem(185);
  height: rem(98);
}

.settings__label {
  color: map-get($colors, contrast);
  font-size: rem(22);
  line-height: 1;
  font-weight: bold;
  margin-bottom: rem(13);
}

.settings__option-container {
  position: relative;
  display: flex;
  flex-direction: column;
}


.settings__label-minmax {
  visibility: hidden;
  color: map-get($colors, contrast);
  font-weight: bold;
  background-color: rgba($color:  map-get($colors, main), $alpha: .90);
  width: rem(160);
  border-radius: rem(6);
  text-align: center;
  padding: rem(7) rem(5);
  font-size: rem(14);
  position: absolute;
  z-index: 1;
  bottom: 83%;
  left: 65%;
  -webkit-box-shadow: rem(10) rem(10) rem(7) 0 rgba(0,0,0,0.39);
  -moz-box-shadow: rem(10) rem(10) rem(7) 0 rgba(0,0,0,0.39);
  box-shadow: rem(10) rem(10) rem(7) 0 rgba(0,0,0,0.39);
  opacity: 0;
  transition: opacity 0.25s;
}

.settings__label-minmax::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 20%;
  border-width: rem(5);
  border-style: solid;
  border-color: rgba($color:  map-get($colors,main), $alpha: .90) transparent transparent transparent;
}

.settings__option-container:hover .settings__label-minmax,
.settings__option-container:focus-within .settings__label-minmax {
  visibility: visible;
  opacity: 1;
}

.settings__option {
  font-size: rem(22);
  color: map-get($colors, white);
  flex-basis: 100%;
  font-weight: bold;
  background-color: transparent;
  border: rem(4) solid map-get($colors, white);
  border-radius: rem(10);
  padding: rem(9.5) rem(13.6);
  text-align: center;
  margin-bottom: rem(25);
  max-height: rem(54);
}

.settings__button:hover, .settings__button:focus, 
.settings__option:hover, .settings__option:focus {
  background-color: rgba($color: map-get($colors, white), $alpha: 0.15);
}

.settings__checkbox-container {
  display: block;
  position: relative;
  padding-left: rem(30);
  margin-top: rem(5);
  margin-bottom: rem(5);
  margin-left: rem(5);
  line-height: rem(21);
  cursor: pointer;
  font-size: rem(16);
  color: map-get($colors, white);
  user-select: none;
}

.settings__checkbox-input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

.settings__checkbox-checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: rem(20);
  width: rem(20);
  background-color: map-get($colors, white);
  transition: 0.25s;
  border-radius: rem(3);
}

.settings__checkbox-container:hover .settings__checkbox-input ~ .settings__checkbox-checkmark {
  background-color: map-get($colors, contrast);
}

.settings__checkbox-input:checked ~ .settings__checkbox-checkmark {
  background-color: map-get($colors, main);
  // border: 1px solid red
}

.settings__checkbox-checkmark::after {
  content: "";
  position: absolute;
  display: none;
}

.settings__checkbox-input:checked ~ .settings__checkbox-checkmark::after {
  display: block;
}

.settings__checkbox-container .settings__checkbox-checkmark::after {
  left: rem(6);
  top: rem(3);
  width: rem(5);
  height: rem(8);
  border: solid map-get($colors, contrast);
  border-width: 0 rem(3) rem(3) 0;
  transform: rotate(45deg);
  box-sizing: content-box;
}

.settings__checkbox-container:hover .settings__checkbox-checkmark:after {
  border-color: map-get($colors, main);
}

.settings__button {
  font-size: rem(22);
  font-weight: bold;
  color: map-get($colors, white);
  border: rem(4) solid map-get($colors, white);
  background-color: transparent;
  border-radius: rem(10);
  padding: rem(12) rem(13);
  flex-basis: 100%;
  margin-top: rem(20);
  align-self: flex-end;
}

@include respond-to(laptop) {
  .settings {
    padding: rem(26) rem(20);
    max-width: rem(242);
  }

  .settings__title-image {
    width: rem(156);
    height: rem(87);
  }

  .settings__label {
    font-size: rem(17);
  }

  .settings__option {
    font-size: rem(17);
    border: rem(3) solid map-get($colors, white);
    border-radius: rem(8);
    margin-bottom: rem(15);
    padding-top: rem(8);
    padding-bottom: rem(8);
  }

  .settings__checkbox-container {
    font-size: rem(14);
    padding-left: rem(25);
  }

  .settings__checkbox-checkmark {
    height: rem(17);
    width: rem(17);
    top: rem(2);
  }

  .settings__button {
    font-size: rem(18);
    border: rem(3) solid map-get($colors, white);
    border-radius: rem(8);
    padding: rem(9.5) rem(13);
    margin-top: rem(15);
  }

}

@include respond-to(mobile) {
  .settings {
    position: fixed;
    z-index: index-level('lvl3');
    top: 0;
    border-radius: 0;
    
    width: 100vw;
    max-width: 100%;
    min-height: 100%;
    min-height: -webkit-fill-available;
  }

  .settings__close {
    display: block;
    position: absolute;
    z-index: index-level('lvl4');

    right: rem(10);
    top: rem(10);
    background-color: transparent;
    border: 0;
    font-size: 0;
  }

  .settings__close::before {
    content: icon('close');
    font-family: 'icons';
    z-index: index-level('lvl4');
    display: block;
    font-size: rem(30);
    color: map-get($colors, contrast);
    cursor: pointer;
  }

  .settings__holder {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);

    padding: rem(40) rem(27);
    width: 100%;

    overflow-y: auto;
    overflow-x: auto;

    //firefox custom scrollbar
    scrollbar-color: map-get($colors, contrast) map-get($colors, base);
    scrollbar-width: auto;

    // ie and edge custom scroll bar
    scrollbar-face-color: map-get($colors, basse);
    scrollbar-track-color: map-get($colors, contrast);
    scrollbar-arrow-color: map-get($colors, base);
    scrollbar-shadow-color: map-get($colors, base); //border
  }

  .settings__holder::-webkit-scrollbar {
    width: rem(12);
    height: rem(12);
  }

  .settings__holder::-webkit-scrollbar-track {
    background-color: map-get($colors, base);
  }

  .settings__holder::-webkit-scrollbar-thumb {
    background-color: map-get($colors, contrast);
    border-radius: rem(30);
  }

  .settings__holder::-webkit-scrollbar-corner {
    background-color: map-get($colors, base);
  }

  .settings__title-image {
    margin-bottom: rem(10);
  }

  .settings__label {
    font-size: rem(26);
    margin-bottom: rem(5);
  }

  .settings__option {
    font-size: rem(26);
    margin-bottom: rem(15);
  }

  .settings__button {
    font-size: rem(26);
  }


  .settings__label-minmax {
    width: rem(200);
    padding: rem(12) rem(5);
    font-size: rem(16);
    left: 60%;
  }

}

@include respond-to(tablet) {
  .settings__close {
    right: rem(20);
    top: rem(20);
  }

  .settings__close::before {
    font-size: rem(46);
  }
  
  .settings__holder {
    max-width: rem(600);
    max-height: 80vh;
  }

  .settings__title-image {
    width: rem(300);
    height: rem(159);
  }

  .settings__option {
    padding-top: rem(32);
    padding-bottom: rem(32);
  }

  .settings__button {
    padding-top: rem(26);
    padding-bottom: rem(26);
  }

}

@include respond-to(smartphone) {
  .settings__holder  {
    max-width: 100%;
    max-height: rem(600);
  }

  .settings__title-image {
    width: rem(230);
    height: rem(122);
  }

  .settings__option {
    padding-top: rem(20);
    padding-bottom: rem(20);
  }

  .settings__button {
    padding-top: rem(15);
    padding-bottom: rem(15);
  }
}

